deploy: c7ee0fdecb62cda5f41f8095b552095476f9af76

--- a/usage/midenc/index.html
+++ b/usage/midenc/index.html
@@ -880,7 +880,7 @@ to add <code>midenc</code> to your <code>PATH</code> manually.</p>
 <span class="w">          </span><span class="n">You</span><span class="w"> </span><span class="n">may</span><span class="w"> </span><span class="n">also</span><span class="w"> </span><span class="k">use</span><span class="w"> </span><span class="err">`</span><span class="o">-</span><span class="err">`</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="n">a</span><span class="w"> </span><span class="k">file</span><span class="w"> </span><span class="n">name</span><span class="w"> </span><span class="k">to</span><span class="w"> </span><span class="k">read</span><span class="w"> </span><span class="n">a</span><span class="w"> </span><span class="k">file</span><span class="w"> </span><span class="k">from</span><span class="w"> </span><span class="n">stdin</span><span class="p">.</span>
 
 <span class="nl">Options</span><span class="p">:</span>
-<span class="w">      </span><span class="o">--</span><span class="k">output</span><span class="o">-</span><span class="n">dir</span><span class="w"> </span><span class="o">&lt;</span><span class="n">DIR</span><span class="o">&gt;</span>
+<span class="w">      </span><span class="c1">--output-dir &lt;DIR&gt;</span>
 <span class="w">          </span><span class="k">Write</span><span class="w"> </span><span class="ow">all</span><span class="w"> </span><span class="n">compiler</span><span class="w"> </span><span class="n">artifacts</span><span class="w"> </span><span class="k">to</span><span class="w"> </span><span class="n">DIR</span>
 
 <span class="w">  </span><span class="o">-</span><span class="n">W</span><span class="w"> </span><span class="o">&lt;</span><span class="k">LEVEL</span><span class="o">&gt;</span>
@@ -893,10 +893,10 @@ to add <code>midenc</code> to your <code>PATH</code> manually.</p>
 <span class="w">          </span><span class="o">-</span><span class="w"> </span><span class="nl">auto</span><span class="p">:</span><span class="w">  </span><span class="n">Enable</span><span class="w"> </span><span class="ow">all</span><span class="w"> </span><span class="n">warnings</span>
 <span class="w">          </span><span class="o">-</span><span class="w"> </span><span class="nl">error</span><span class="p">:</span><span class="w"> </span><span class="n">Promotes</span><span class="w"> </span><span class="n">warnings</span><span class="w"> </span><span class="k">to</span><span class="w"> </span><span class="n">errors</span>
 
-<span class="w">  </span><span class="o">-</span><span class="n">v</span><span class="p">,</span><span class="w"> </span><span class="o">--</span><span class="n">verbose</span>
+<span class="w">  </span><span class="o">-</span><span class="n">v</span><span class="p">,</span><span class="w"> </span><span class="c1">--verbose</span>
 <span class="w">          </span><span class="k">When</span><span class="w"> </span><span class="k">set</span><span class="p">,</span><span class="w"> </span><span class="n">produces</span><span class="w"> </span><span class="n">more</span><span class="w"> </span><span class="n">verbose</span><span class="w"> </span><span class="k">output</span><span class="w"> </span><span class="n">during</span><span class="w"> </span><span class="n">compilation</span>
 
-<span class="w">  </span><span class="o">-</span><span class="n">h</span><span class="p">,</span><span class="w"> </span><span class="o">--</span><span class="n">help</span>
+<span class="w">  </span><span class="o">-</span><span class="n">h</span><span class="p">,</span><span class="w"> </span><span class="c1">--help</span>
 <span class="w">          </span><span class="k">Print</span><span class="w"> </span><span class="n">help</span><span class="w"> </span><span class="p">(</span><span class="n">see</span><span class="w"> </span><span class="n">a</span><span class="w"> </span><span class="n">summary</span><span class="w"> </span><span class="k">with</span><span class="w"> </span><span class="s1">&#39;-h&#39;</span><span class="p">)</span>
 </code></pre></div>
 
